stuf/src/p3/tests/t008.err
Semantic error on line 3: Incorrect type (string) for initial value of variable 'some_number' of type (int).
