stuf/src/p3/tests/t008.gpl
//Strings cannot be assigned to integers.
//This should generate an error message
int some_number="Happy Days";
